# chromaticity

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STANDARDS.md  TASKS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
chromaticity/: __main__.py  audio.py  glsl_parser.py  live.py  mapper.py  metrics.py  probe.py  profile.py  renderer.py
docs/: STANDARDS.md  design.md  phase1-codex-brief.md  phase3-spec-draft.md
docs/ADR/: ADR-001-render-probe-uniform-inference.md
docs/explanation/: design.md
docs/how-to/: non-code-contribution.md
docs/reference/: vocabulary.md
docs/reference/ADR/: ADR-002-preprocess-live-split.md  ADR-003-mapping-profile-schema.md  ADR-003-mit-permissive-licensing.md  ADR-004-mapping-profile-schema.md  ADR-005-shader-security-model.md  ADR-006-render-probe-three-stage-pipeline.md  ADR-007-confidence-weighted-beat-phase-fallback.md
docs/tutorials/: glsl-for-perception-scientists.md
references/: README.md
test-audio/: README.md
test-shaders/: 7cBSDR.glsl  Dsf3WH.glsl  NddSWs.glsl  NddSWs_bufferA.glsl  NddSWs_common.glsl  README.md  XdycWG.glsl  XdycWG_bufferA.glsl  XdycWG_bufferB.glsl  XdycWG_bufferC.glsl  XdycWG_common.glsl  XtK3W3.glsl  curl_flow.glsl  kitaoka_drift.glsl  kuramoto.glsl  logistic_cascade.glsl  negative_test.glsl  phase_portrait.glsl  primrose_field.glsl  reaction_diffusion.glsl  sc2XDR.glsl  sc2XDR_bufferA.glsl  standing_wave.glsl  voronoi_heartbeat.glsl
tests/: test_audio.py  test_live.py  test_mapper.py  test_probe.py
