[project]
name = "chromaticity"
version = "0.2.0"
description = "Perceptually-principled audio-reactive visualiser for live music performance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "moderngl>=5.10",  # BSD
    "numpy>=1.26",  # BSD
    "scikit-image>=0.22",
    "sounddevice>=0.4",  # MIT
    "librosa>=0.10",  # ISC (offline analysis only; real-time path uses custom implementation)
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
